# dact

./: .cvsignore  .dact.c.swp  AUTHORS  ChangeLog  HEADER  Makefile.dep  Makefile.in  README  TODO.ideas  aclocal.m4  algorithm-defs.h  algorithms.h  buffer.c  buffer.h  cipher_chaos.c  cipher_chaos.h  cipher_psub.c  cipher_psub.h  cipher_serpent.c  cipher_serpent.h  cipher_sub.c  cipher_sub.h  ciphers.h  comp_bitsums.c  comp_bitsums.h  comp_bzlib.c  comp_bzlib.h  comp_bzlib.lnk  comp_delta.c  comp_delta.h  comp_factor.c  comp_factor.h  comp_fail.c  comp_fail.h  comp_lzoox.c  comp_lzoox.h  comp_lzoox.lnk  comp_lzooy.c  comp_lzooy.h  comp_lzota.c  (+65 more)
CVS/: Entries  Repository
Docs/: INSTALL  TODO  config_help.txt  dact.1  dact.1.txt  dact.txt  file_format.txt  helpfile.txt  man2txt
Docs/CVS/: Entries  Repository
autom4te.cache/: output.0  requests  traces.0
registration/: compression
work/: .cvsignore  .dct  Makefile  Makefile.dct  acconfig.h  dact-upgrade.sh  dact.c.orig  dact.c.working  dact.diff  freq  freq.c  home.fr.txt  makearch.sh  makesnapshot.sh  subst.dct  tar.txt  test.c  warnings.txt  win32-errors.txt
work/comp_range/: Makefile.in  comp_range.c  comp_range.h  port.h  qsmodel.c  qsmodel.h  rangecod.c  rangecod.h
work/comp_range/CVS/: Entries  Repository  Root
work/contrib/chaoscipher/: .cipher_chaos.c.swp  cipher_chaos  cipher_chaos.c
work/contrib/huff/: comp_huff.c  comp_huff.h
work/contrib/ll/: Makefile  ll.c
work/contrib/lzo/lzo-1.08/: Makefile  config.h  config.status  libtool
work/contrib/lzo/lzo-1.08/examples/: Makefile  dict  lpack  overlap  precomp  precomp2  simple
work/contrib/lzo/lzo-1.08/examples/.deps/: dict.Po  lpack.Po  overlap.Po  precomp.Po  precomp2.Po  simple.Po
work/contrib/lzo/lzo-1.08/examples/.libs/: dict  lpack  overlap  precomp  precomp2  simple
work/contrib/lzo/lzo-1.08/include/: Makefile
work/contrib/lzo/lzo-1.08/ltest/: Makefile  ltest
work/contrib/lzo/lzo-1.08/ltest/.deps/: ltest.Po
work/contrib/lzo/lzo-1.08/ltest/.libs/: ltest
work/contrib/lzo/lzo-1.08/minilzo/: Makefile  testmini
work/contrib/lzo/lzo-1.08/minilzo/.deps/: minilzo.Po  testmini.Po
work/contrib/lzo/lzo-1.08/src/: Makefile
work/contrib/lzo/lzo-1.08/src/.deps/: alloc.Plo  io.Plo  lzo1.Plo  lzo1_99.Plo  lzo1a.Plo  lzo1a_99.Plo  lzo1b_1.Plo  lzo1b_2.Plo  lzo1b_3.Plo  lzo1b_4.Plo  lzo1b_5.Plo  lzo1b_6.Plo  lzo1b_7.Plo  lzo1b_8.Plo  lzo1b_9.Plo  lzo1b_99.Plo  lzo1b_9x.Plo  lzo1b_cc.Plo  lzo1b_d1.Plo  lzo1b_d2.Plo  lzo1b_rr.Plo  lzo1b_xx.Plo  lzo1c_1.Plo  lzo1c_2.Plo  lzo1c_3.Plo  lzo1c_4.Plo  lzo1c_5.Plo  lzo1c_6.Plo  lzo1c_7.Plo  lzo1c_8.Plo  lzo1c_9.Plo  lzo1c_99.Plo  lzo1c_9x.Plo  lzo1c_cc.Plo  lzo1c_d1.Plo  lzo1c_d2.Plo  lzo1c_rr.Plo  lzo1c_xx.Plo  lzo1f_1.Plo  lzo1f_9x.Plo  (+30 more)
work/contrib/lzo/lzo-1.08/src/.libs/: liblzo.lai  liblzo.so.1.0.0
work/contrib/lzo/lzo-1.08/tests/: Makefile  align  chksum  promote  sizes
work/contrib/lzo/lzo-1.08/tests/.deps/: align.Po  chksum.Po  promote.Po  sizes.Po
work/contrib/lzo/lzo-1.08/tests/.libs/: align  chksum
work/contrib/tic/tic98/: Makefile  README  arithcode.c  arithcode.h  arithcode.old.c  arithcode.old.h  b_gamma.c  b_gamma.h  b_gamma_dec.c  b_gamma_enc.c  boundary.c  boundary.h  char_features.c  codebilevel.c  codebilevel.h  codebook.c  codebook.h  context.c  context.h  coords_baird.c  coords_docstrum.c  coords_profile.c  docstrum.c  docstrum.h  double_array.c  double_array.h  getopt.c  getopt.h  globals.c  globals.h  hough.c  hough.h  labelmarks.c  line.c  line.h  main_skew.c  main_tic.c  marklist.c  marklist.h  math-utils.c  (+43 more)
work/crack-me/: file001.html.block-1  file001.html.dct  file001.info  index.ttml
work/dist-id/: .dist-id.h.swp  Makefile  NeedMD5  addmass.sh  dist-id  dist-id.c  dist-id.h  md5.c  md5.h
work/gentoo/: Atlas-C++-0.4.5.tar  SDL_ttf-2.0.5.tar
work/libopennet/: Makefile  Makefile.in  README  acconfig.h  aclocal.m4  buffer.c  buffer.h  conf.h  config.cache  config.h  config.h.in  config.status  configure  configure.in  crc.c  crc.h  makearch.sh  opennet.c  opennet.h  parse.c  parse.h  strsep.h
work/open_net/: .net.c.swp  Makefile  net.c  net.h  parse.c  parse.h  smtv.c
work/src/bzip2-1.0.2/: Makefile  bzip2  bzip2.c  bzip2recover
work/test/: Makefile  crc-test  crc-test.c  filter  filter.c  meep  meep.c  mkstemp-test.c  parse-test  parse-test.c  sort  sort.c
work/testLON/: Makefile.in  acconfig.h  aclocal.m4  config.h  config.h.in  configure.in  test.c
work/txt/: README  rskc001.txt
